Finalização do "mentalista" da aula 03

--- a/Imersão Dev/Aula-03/index.html
+++ b/Imersão Dev/Aula-03/index.html
@@ -20,15 +20,19 @@
             <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="page-logo"
                 alt="">
 
-            <div class="text-box"></div>
-            <input type="number" id="respota-input">
+            <div class="text-box">
+                <span id="mensagem"></span>
+            </div>
+            <input type="number" id="resposta-input">
             <button class="botao-resposta">Responder</button>
+
+            <button id="recarregar">Recomeçar</button>
         </div>
         <a href="https://alura.com.br/" target="_blank">
             <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
         </a>
 
-        <!--<script src="./mentalista.js"></script>-->
+        <script src="./mentalista.js"></script>
     </body>
 
 </html>
