Alteração no style da pagina

--- a/ImersãoDev/Aula-01/index.html
+++ b/ImersãoDev/Aula-01/index.html
@@ -38,7 +38,7 @@
             <p class="page-subtitle">Descubra os valores em Fahrenheit e Kelvin</p>
             <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-conversor-de-moedas.svg" class="page-logo" alt="logo da imersão dev da alura">
             <br>
-            <input type="number" id="input-temp" placeholder="temperatura em graus Celcius(°C)">
+            <input type="number" id="input-temp" placeholder="Temperatura em graus Celcius(°C)">
             <button id="botao-temp">Converter</button>
             <br>
             <p class="text-conversor">A temperatura em graus Fahrenheit é: </p><span id="Fahrenheit-value" class="text-conversor"></span>
