--- a/ImersãoDev/Aula-06/index.html
+++ b/ImersãoDev/Aula-06/index.html
@@ -29,7 +29,7 @@
     
             </tbody>
         </table>
-        <script src="./js/app.js"></script>
+        <script src="./js/classificacao.js"></script>
     </body>
 
 </html>
