Adição de botão twitter e manutenção do css com uso de variaveis

--- a/ImersãoDev/Aula-10/index.html
+++ b/ImersãoDev/Aula-10/index.html
@@ -15,24 +15,28 @@
     <header>
         <img class="foto" src="https://unavatar.now.sh/github/Matheus-Gondra">
     </header>
-        <h1> Matheus Gondra</h1>
+        <h1 class="title"> Matheus Gondra</h1>
 
-        <p>Certificard da #ImersãoDev 2021 da <a class="alura" href="https://www.alura.com.br/">#Alura</a></p>
-        <div>
-            <h2>Insígnias da imersão.dev</h2>
+        <p class="text-short">Certificard da #ImersãoDev 2021 da <a class="alura" href="https://www.alura.com.br/">#Alura</a></p>
+        <div class="container-insignias">
+            <h2 class="sub-title">Insígnias da imersão.dev</h2>
             <ol>
-                <li><a href="https://codepen.io/matheus-gondra/pen/JjEjRgj">💰 Conversor de moedas</a></li>
-                <li><a href="https://codepen.io/matheus-gondra/pen/RwKNdXq">🔢 Aventura Pokemon</a></li>
-                <li><a href="https://codepen.io/matheus-gondra/pen/QWdygvr">🔮 Mentalista</a></li>
-                <li><a href="https://codepen.io/matheus-gondra/pen/OJWXxWq">🎥 AluraFlix</a></li>
-                <li><a href="https://codepen.io/matheus-gondra/pen/OJWbvgK">🏆 Tabela de classificação</a></li>
-                <li><a href="https://codepen.io/matheus-gondra/pen/ZELePxQ">🃏 Supertrunfo</a></li>
-                <li><a href="https://codepen.io/matheus-gondra/pen/WNRjeRX">🎓 Certificard</a></li>
+                <li><a class="codepen-project" href="https://codepen.io/matheus-gondra/pen/JjEjRgj">💰 Conversor de moedas</a></li>
+                <li><a class="codepen-project" href="https://codepen.io/matheus-gondra/pen/RwKNdXq">🔢 Aventura Pokemon</a></li>
+                <li><a class="codepen-project" href="https://codepen.io/matheus-gondra/pen/QWdygvr">🔮 Mentalista</a></li>
+                <li><a class="codepen-project" href="https://codepen.io/matheus-gondra/pen/OJWXxWq">🎥 AluraFlix</a></li>
+                <li><a class="codepen-project" href="https://codepen.io/matheus-gondra/pen/OJWbvgK">🏆 Tabela de classificação</a></li>
+                <li><a class="codepen-project" href="https://codepen.io/matheus-gondra/pen/ZELePxQ">🃏 Supertrunfo</a></li>
+                <li><a class="codepen-project" href="https://codepen.io/matheus-gondra/pen/WNRjeRX">🎓 Certificard</a></li>
 
+            
             </ol>
         </div>
         
-        <a href="https://github.com/Matheus-Gondra"><img class="github" src="https://img.shields.io/badge/-Github-000?style=flat-square&logo=Github&logoColor=white&link=https://github.com/"></a>
+        <div class="conatiner-rede-social">
+            <a href="https://github.com/Matheus-Gondra"><img src="https://img.shields.io/badge/-Github-000?style=flat-square&logo=Github&logoColor=white&link=https://github.com/"></a>
+	        <a href="https://twitter.com/DeGondra"><img src="https://img.shields.io/badge/-Twitter-1ca0f1?style=flat-square&labelColor=1ca0f1&logo=twitter&logoColor=white&link=https://twitter.com/"></a> 
+        </div>
 </section>
 </body>
 
